Atualizacao do Botao select e alggumas outras funcionalidades

--- a/app/views/exame_medicos/index.html.erb
+++ b/app/views/exame_medicos/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 <header>
-<h1>Exame Medicos</h1>
+<h1 align="center">Exames Médicos</h1>
 </header>
-<table>
+<table align="center">
   <thead>
     <tr>
       <th>Nome</th>
@@ -30,5 +30,5 @@
 
 <br>
 
-<h3><%= link_to 'Novo Exame Medico', new_exame_medico_path %></h3>
-<h3><%= link_to 'Página Inicial', welcome_index_path  %></h3>
+<h3 align="center"><%= link_to 'Novo Exame Medico', new_exame_medico_path %></h3>
+<h3 align="center"><%= link_to 'Página Inicial', welcome_index_path  %></h3>
