--- a/app/views/laboratorios/index.html.erb
+++ b/app/views/laboratorios/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Laboratorios</h1>
-
-<table>
+<header>
+<h1 align="center">Laboratórios</h1> 
+</header>
+<table align="center">
   <thead>
     <tr>
       <th>Nome</th>
@@ -30,5 +30,5 @@
 
 <br>
 
-<h3><%= link_to 'Novo Laboratório', new_laboratorio_path %></h3>
-<h3><%= link_to 'Página Inicial', welcome_index_path  %></h3>
+<h3 align="center"><%= link_to 'Novo Laboratório', new_laboratorio_path %></h3>
+<h3 align="center"><%= link_to 'Página Inicial', welcome_index_path  %></h3>
