--- a/app/views/exame_medicos/_form.html.erb
+++ b/app/views/exame_medicos/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :status %>
-    <%= form.check_box :status %>
+    <%= form.select :status, [['Ativo', true], ['Inativo', false]] %>
   </div>
 
   <div class="field">
@@ -35,5 +35,3 @@
     <%= form.submit %>
   </div>
 <% end %>
-
-
