--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,12 +1,14 @@
-<h1>Alliar</h1>  
+<h1 align="center">Alliar</h1>  
 
-<p>Seja bem-vindo, por gentileza seleciona uma das opcoes:</p>
+<p align="center">Seja bem-vindo, por gentileza seleciona uma das opcoes:</p>
 
-<h3><%= link_to 'Laboratórios', laboratorios_path %></h3>
-<h3><%= link_to 'Exames', exame_medicos_path  %></h3>
+<h3 align="center"><%= link_to 'Laboratórios', laboratorios_path %></h3>
+<h3 align="center"><%= link_to 'Exames', exame_medicos_path  %></h3>
 
+<div align="center">
 <%= form_with url: "/exame_medicos", method: :get do |form| %>
   <%= form.label :query, "Search for:" %>
   <%= form.text_field :query %>
   <%= form.submit "Search" %>
 <% end %>
+</div>
