--- a/app/views/exame_medicos/edit.html.erb
+++ b/app/views/exame_medicos/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Exame Medico</h1>
+<h1>Editar Exame Medico</h1>
 
 <%= render 'form', exame_medico: @exame_medico %>
 
-<%= link_to 'Show', @exame_medico %> |
-<%= link_to 'Back', exame_medicos_path %>
+<%= link_to 'Mostrar', @exame_medico %> |
+<%= link_to 'Voltar', exame_medicos_path %>
