--- a/app/views/exame_medicos/new.html.erb
+++ b/app/views/exame_medicos/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Exame Medico</h1>
+<h1>Criar Exame Medico</h1>
 
 <%= render 'form', exame_medico: @exame_medico %>
 
-<%= link_to 'Back', exame_medicos_path %>
+<%= link_to 'Voltar', exame_medicos_path %>
