--- a/app/views/laboratorios/edit.html.erb
+++ b/app/views/laboratorios/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Laboratorio</h1>
+<h1>Editar Laboratorio</h1>
 
 <%= render 'form', laboratorio: @laboratorio %>
 
-<%= link_to 'Show', @laboratorio %> |
-<%= link_to 'Back', laboratorios_path %>
+<%= link_to 'Mostrar', @laboratorio %> |
+<%= link_to 'Voltar', laboratorios_path %>
