--- a/app/views/laboratorios/index.html.erb
+++ b/app/views/laboratorios/index.html.erb
@@ -8,7 +8,7 @@
       <th>Nome</th>
       <th>Endereco</th>
       <th>Status</th>
-       <th>ID</th>
+      <th>ID</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,11 +18,11 @@
       <tr>
         <td><%= laboratorio.nome %></td>
         <td><%= laboratorio.endereco %></td>
-         <td><%= humanize_boolean(laboratorio.status) %></td>
+        <td><%= humanize_boolean(laboratorio.status) %></td>
         <td><%= laboratorio.id %></td>
-        <td><%= link_to 'Show', laboratorio %></td>
-        <td><%= link_to 'Edit', edit_laboratorio_path(laboratorio) %></td>
-        <td><%= link_to 'Destroy', laboratorio, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Mostrar', laboratorio %></td>
+        <td><%= link_to 'Editar', edit_laboratorio_path(laboratorio) %></td>
+        <td><%= link_to 'Deletar', laboratorio, method: :delete, data: { confirm: 'Tem certeza?' } %></td>
       </tr>
     <% end %>
   </tbody>
