--- a/app/views/laboratorios/new.html.erb
+++ b/app/views/laboratorios/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Laboratorio</h1>
+<h1>Criar Laboratorio</h1>
 
 <%= render 'form', laboratorio: @laboratorio %>
 
-<%= link_to 'Back', laboratorios_path %>
+<%= link_to 'Voltar', laboratorios_path %>
